force-app/main/default/objects/AssessmentLineItem__c/AssessmentLineItem__c.object-meta.xml
<CustomObject>
    <label>Assessment Line Item</label>
    <nameField>
        <displayFormat>ALI-{0000000}</displayFormat>
        <label>Assessment Line Item</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assessment Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>