force-app/main/default/objects/AssessmentLineItem__c/fields/Interviewed__c.field-meta.xml
<CustomField>
    <fullName>Interviewed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Passed</label>
    <type>Checkbox</type>
</CustomField>