force-app/main/default/objects/AssessmentLineItem__c/fields/maxScore__c.field-meta.xml
<CustomField>
    <fullName>maxScore__c</fullName>
    <label>maxScore</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>