force-app/main/default/objects/AssessmentLineItem__c/fields/PanelCategory__c.field-meta.xml
<CustomField>
    <fullName>PanelCategory__c</fullName>
    <label>Panel Category</label>
    <referenceTo>PanelCategory__c</referenceTo>
    <relationshipName>Assessment_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>