force-app/main/default/objects/AssessmentLineItem__c/fields/PanelCategoryName__c.field-meta.xml
<CustomField>
    <fullName>PanelCategoryName__c</fullName>
    <label>PanelCategoryName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>