force-app/main/default/objects/AssessmentLineItem__c/fields/PH_Assessment__c.field-meta.xml
<CustomField>
    <fullName>PH_Assessment__c</fullName>
    <label>PH_Assessment</label>
    <referenceTo>PH_Assessment__c</referenceTo>
    <relationshipLabel>Panel Categories</relationshipLabel>
    <relationshipName>Assessment_Line_Items</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>