force-app/main/default/objects/AssessmentLineItem__c/validationRules/ValidateScore.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidateScore</fullName>
    <active>true</active>
    <description>Does not allow user to enter a score greater than the max score.</description>
    <errorConditionFormula>Score__c &gt;  maxScore__c</errorConditionFormula>
    <errorDisplayField>Score__c</errorDisplayField>
    <errorMessage>The actual score can not be greater than the max score.</errorMessage>
</ValidationRule>