force-app/main/default/objects/AssessmentLineItem__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Interviewed__c</columns>
    <columns>Status__c</columns>
    <columns>Score__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>