force-app/main/default/objects/AssessmentLineItem__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>PanelCategory__c</columns>
    <columns>PH_Assessment__c</columns>
    <columns>Score__c</columns>
    <columns>Comment__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>